style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Syne:wght@400..800&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --bg-color: #b83535;
  --stats-bg: #000;
  --font-family: Syne, sans-serif;
  --font-color: rgb(218, 207, 199);
  --complete: #00d800;
  --in-progress: #ffe925;
  --decp-color: #dfd0d0;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
  background: var(--bg-color);
}

.intro-txt {
  margin-top: 2.25rem;
  position: relative;
  text-align: center;
  font-family: var(--font-family);
  color: var(--font-color);
  font-weight: 900;
}

.intro-txt::after {
  bottom: -10%;
  left: 0;
  position: absolute;
  content: "";
  width: 0;
  height: 5px;
  background: linear-gradient(
    135deg,
    var(--bg-color), var(--in-progress), var(--complete)
  );
  border-radius: 100px;
  animation: init 535ms cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}

h1 {
  margin-top: 2.25rem;
  position: relative;
  text-align: center;
  font-family: var(--font-family);
  color: var(--font-color);
  font-weight: 900;
}

#content {
  width: 100%;
  max-width: 525px;
  padding: .5rem;
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.block {
  opacity: 0;
  border: 5px solid var(--stats-bg);
  background: #ffffff2c;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: .5rem;
  padding-right: .5rem;
  border-radius: 12px;
  animation: setUp 425ms linear forwards;
  animation-timeline: view();
  animation-range-start: 100px;
  animation-range-end: 200px;
}

.block.complete {
  background: #423e3e83;
  border: 5px solid var(--complete);
  filter: grayscale(.5);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
}

.block:nth-child(1) {
  margin-top: 2rem;
}

.stats {
  border-radius: 100px;
  width: fit-content;
  padding: .4rem 2.2rem;
  padding-left: .75rem;
  background: var(--stats-bg);
  color: var(--font-color);
  text-align: left;
  font-family: var(--font-family);
}

.span-completed {
  color: var(--complete);
  font-weight: 700;
  padding-left: .25rem;
}

.span-in-progress {
  color: var(--in-progress);
  font-weight: 700;
  padding-left: .25rem;
}

.para {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: .25rem;
}

.ball {
  margin-left: .2rem;
  display: inline-block;
  width: 15px;
  height: 15px;
  background: #fff;
  border-radius: 50%;
  animation: ballAnim 1s ease infinite;
}

.span-in-progress + .ball {
  background: var(--in-progress);
}

.span-completed + .ball {
  background: var(--complete);
}

.title {
  margin-top: .5rem;
  font-family: var(--font-family);
  color: var(--font-color);
}

.description {
  margin-top: .45rem;
  font-family: "Outfit";
  color: var(--decp-color);
}

.occ {
  background: #ffffff67;
}

.border-in-progress {
  border: 5px solid var(--in-progress) !important;
}

.soon {
  margin: 2rem 0;
}

.bar{
  top: 50%;
  transform: translateY(-50%);
  width: 9px;
  height: 100px;
  position: absolute;
  left: -2.5%;
  background: var(--stats-bg);
  border-radius: 20px 0 0 20px;
}

.bar.bar-null{
  background: var(--stats-bg);
}

.bar.progress{
  background: var(--in-progress);
}

.bar.complete{
  background: var(--complete);
}

@keyframes ballAnim {
  0%, 100% {transform: scale(1);}
  50% {transform: scale(1.12);}
}

@keyframes setUp {
  0% {transform: translateY(15px); opacity: 0;}
  100% {opacity: 1;}
}

@keyframes init {
  to {width: 100%;}
}

@media (max-width: 300px) {
  .bar {
    top: 103%;
    transform: translateY(-50%) rotateZ(-90deg);
    width: 9px;
    height: 100px;
    position: absolute;
    left: 50%;
    background: var(--stats-bg);
    border-radius: 20px 0 0 20px;
  }
}

@media (max-width: 295px) {
  .stats {
    padding-right: .85rem;
  }
}

@media (max-width: 275px) {
  .stats {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
    padding: 2rem;
    width: 80%;
  }
  .para {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    word-break: break-all;
  }
  .block {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  span {
    text-align: center;
    word-break: normal;
  }
  .span-in-progress {
    padding: 0;
  }
  .ball {
    margin: 0;
  }
  .title {
    font-size: 1rem;
  }
  .intro-txt {
    font-size: 1.15rem;
  }
  .intro-txt::after {
    height: 3px;
    width: 20%;
  }
  .soon {
    font-size: 1.2rem;
  }
}

@media (max-width: 220px) {
  .bar {
    
  }
}

@media (max-width: 210px) {
  .title {
    font-size: 0.9rem;
    word-break: break-all;
  }
  span {
    word-break: break-all;
    text-align: center;
  }
}

@media (max-width: 190px) {
  .bar {
    top: 101.5%;
    left: 48.5%;
  }
}

